# multiagent-marketplace-simulation

./: README.md  db.py  pyproject.toml  run_simulation.py
agents/configs/: john_keynes.yaml  jordan_belfort.yaml  julius.yaml  mao_zedong.yaml  warren_buffet.yaml
agents/states/: agent.py
agents/templates/: inbox.jinja  inventory.jinja  market.jinja
models/: agent.py  market.py
schemas/: agent.py  inventory.py  message.py  offer.py  simulation.py  trade.py
simulation/: __init__.py  main.py
utils/: agent_config.py  id_generator.py  render_template.py  tools_factory.py
