[project]
name = "marketplace-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "taskipy>=1.14.1",
    "typing-extensions>=4.15.0",
]

[tool.ruff] 
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint] 
preview = true 
select = ['I', 'F', 'E', 'W', 'PL', 'PT'] 

[tool.ruff.format] 
preview = true 
quote-style = 'single' 

[tool.taskipy.tasks]  
format = 'ruff format . && ruff check . --fix'

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
